--- a/dev-app/components/button/button-getting-started.html
+++ b/dev-app/components/button/button-getting-started.html
@@ -1,98 +1,9 @@
 <template>
 
-<style>
-
-  a, body, h1, h2, h3, h4, h5, h6, kbd, li, p, ul {
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-  }
-
-  #doc-right-toc {
-    color: rgb(0, 0, 0);
-    font-size: 14px;
-    padding-top: 30px;
-    top: 50px;
-    right: 20px;
-    width: 240px;
-    margin-right: 40px;
-    position: fixed;
-    max-height: 100%;
-    overflow-y: auto;
-    font-size: 1.4rem;
-    border-left: 1px solid #ddd;
-    height: calc(100% - 50px);
-    z-index: 100;
-    background: #fff;
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-  }
-
-  #md-content {
-    top: 50px;
-    bottom: 0;
-    margin-top: 0;
-    padding-right: 300px;
-    max-width: 100%;
-    overflow: auto;
-  }
-
-  .back-to-top {
-    position: fixed;
-    bottom: 55px;
-    right: 50px;
-    display: none;
-    font-size: 20px;
-    outline: none;
-    background-color: #0073dc;
-    color: #fff;
-    border-radius: 50%;
-    height: 2.57143em;
-    line-height: 1;
-    padding: 0;
-    width: 2.57143em;
-    box-shadow: none;
-    -webkit-transition: box-shadow .28s cubic-bezier(.4,0,.2,1);
-    transition: box-shadow .28s cubic-bezier(.4,0,.2,1);
-    -webkit-font-smoothing: antialiased;
-    border: 1px solid;
-    box-sizing: border-box;
-    cursor: pointer;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none;
-    text-transform: none;
-    z-index: 101;
-  }
-
-  #doc-right-toc>span {
-    padding: 0 0 0 15px;
-    display: block;
-    font-weight: 700;
-    font-size: 16px;
-  }
-
-  #doc-right-toc ul {
-    margin: 0;
-    padding: 10px 15px 15px 0;
-  }
-
-  #doc-right-toc ul li.active, #doc-right-toc ul li.select {
-    color: #0073dc!important;
-    border-color: #0073dc;
-  }
-
-  #doc-right-toc ul li {
-    padding-left: 15px;
-    list-style: none;
-    word-break: break-word;
-    text-decoration: none;
-    border-left: 2px solid transparent;
-    font-size: 14px;
-  }
-
-</style>
   <div class="doc-body-content">
     <div id="md-content" class="e-view">
       <div id="md-cnt">
-        <h1 id="getting-started"><a href="#getting-started" aria-hidden="" class="anchor"><svg
+        <h1 id="getting-started"><a href="#gs" aria-hidden="" class="anchor"><svg
               aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -100,7 +11,7 @@
             </svg></a>Getting started with JavaScript Button control</h1>
         <p>This section explains how to create a simple Button and to configure the Button
           component.</p>
-        <h2 id="dependencies"><a href="#dependencies" aria-hidden="" class="anchor"><svg
+        <h2 id="dependencies"><a href="#dependencies" aria-hidden="" class="anchor" router-ignore data-router-ignore><svg
               aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -114,7 +25,7 @@
         <span class="token operator">|</span><span class="token operator">--</span> @syncfusion<span class="token operator">/</span>ej2<span class="token operator">-</span>base</code></pre>
         </div>
         <h2 id="setup-your-development-environment"><a href="#setup-your-development-environment"
-            aria-hidden="" class="anchor"><svg aria-hidden="true" height="16" version="1.1"
+            aria-hidden="" class="anchor" router-ignore data-router-ignore><svg aria-hidden="true" height="16" version="1.1"
               viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -170,7 +81,7 @@
         document<span class="token punctuation">.</span><span class="token function">getElementById</span><span class="token punctuation">(</span><span class="token string">'container'</span><span class="token punctuation">)</span><span class="token punctuation">.</span>style<span class="token punctuation">.</span>visibility <span class="token operator">=</span> <span class="token string">"visible"</span><span class="token punctuation">;</span>
     <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span></code></pre>
         </div>
-        <h2 id="add-button-to-the-project"><a href="#add-button-to-the-project" aria-hidden=""
+        <h2 id="add-button-to-the-project"><a router-ignore data-router-ignore href="#add-button-to-the-project" aria-hidden=""
             class="anchor"><svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16"
               width="16">
               <path fill-rule="evenodd"
@@ -227,7 +138,7 @@
     button<span class="token punctuation">.</span><span class="token function">appendTo</span><span class="token punctuation">(</span><span class="token string">'#element'</span><span class="token punctuation">)</span><span class="token punctuation">;</span></code></pre>
         </div>
         <h2 id="adding-style-sheet-to-the-application"><a
-            href="#adding-style-sheet-to-the-application" aria-hidden="" class="anchor"><svg
+            router-ignore data-router-ignore href="#adding-style-sheet-to-the-application" aria-hidden="" class="anchor"><svg
               aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -240,7 +151,7 @@
             class="language-css"><code class="language-css"><span class="token atrule"><span class="token rule">@import</span> <span class="token string">"../node_modules/@syncfusion/ej2-base/styles/material.css"</span><span class="token punctuation">;</span></span>
     <span class="token atrule"><span class="token rule">@import</span> <span class="token string">"../node_modules/@syncfusion/ej2-buttons/styles/material.css"</span><span class="token punctuation">;</span></span></code></pre>
         </div>
-        <h2 id="run-the-application"><a href="#run-the-application" aria-hidden=""
+        <h2 id="run-the-application"><a router-ignore data-router-ignore href="#run-the-application" aria-hidden=""
             class="anchor"><svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16"
               width="16">
               <path fill-rule="evenodd"
@@ -398,7 +309,7 @@
             </div>
           </div>
         </div>
-        <h2 id="change-button-type"><a href="#change-button-type" aria-hidden="" class="anchor"><svg
+        <h2 id="change-button-type"><a router-ignore data-router-ignore href="#change-button-type" aria-hidden="" class="anchor"><svg
               aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -549,7 +460,7 @@
               id="e-content-o0nyz_1"></div>
           </div>
         </div>
-        <h2 id="see-also"><a href="#see-also" aria-hidden="" class="anchor"><svg aria-hidden="true"
+        <h2 id="see-also"><a router-ignore data-router-ignore href="#see-also" aria-hidden="" class="anchor"><svg aria-hidden="true"
               height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -594,16 +505,16 @@
     <div class="layout__RightToc-sc-1t3oqgw-0 ixCaAR">
       <div id="doc-right-toc"><span>Contents</span>
         <ul>
-          <li class="doc-anchor-h2 select"><a href="#dependencies">Dependencies</a></li>
-          <li class="doc-anchor-h2"><a href="#setup-your-development-environment">Setup your
+          <li class="doc-anchor-h2 select"><a router-ignore data-router-ignore href="#dependencies">Dependencies</a></li>
+          <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#setup-your-development-environment">Setup your
               development environment</a></li>
-          <li class="doc-anchor-h2"><a href="#add-button-to-the-project">Add Button to the
+          <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#add-button-to-the-project">Add Button to the
               project</a></li>
-          <li class="doc-anchor-h2"><a href="#adding-style-sheet-to-the-application">Adding Style
+          <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#adding-style-sheet-to-the-application">Adding Style
               sheet to the Application</a></li>
-          <li class="doc-anchor-h2"><a href="#run-the-application">Run the application</a></li>
-          <li class="doc-anchor-h2"><a href="#change-button-type">Change Button type</a></li>
-          <li class="doc-anchor-h2"><a href="#see-also">See Also</a></li>
+          <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#run-the-application">Run the application</a></li>
+          <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#change-button-type">Change Button type</a></li>
+          <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#see-also">See Also</a></li>
         </ul>
       </div>
     </div><button class="back-to-top" id="scroll-top" style="display: none;"><span
@@ -614,7 +525,7 @@
   <!-- <div class="doc-body-content">
     <div id="md-content" class="e-view">
       <div id="md-cnt">
-        <h1 id="getting-started"><a href="#getting-started" aria-hidden="" class="anchor"><svg aria-hidden="true"
+        <h1 id="getting-started"><a router-ignore data-router-ignore href="#getting-started" aria-hidden="" class="anchor"><svg aria-hidden="true"
               height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -622,7 +533,7 @@
             </svg></a>Getting started with JavaScript Button control</h1>
         <p>This section explains how to create a simple Button and to configure the Button
           component.</p>
-        <h2 id="dependencies"><a href="#dependencies" aria-hidden="" class="anchor"><svg aria-hidden="true" height="16"
+        <h2 id="dependencies"><a router-ignore data-router-ignore href="#dependencies" aria-hidden="" class="anchor"><svg aria-hidden="true" height="16"
               version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -639,13 +550,13 @@
       </div>
     <div class="layout__RightToc-sc-1t3oqgw-0 ixCaAR"><div id="doc-right-toc"><span>Contents</span>
           <ul>
-            <li class="doc-anchor-h2 select"><a href="#dependencies">Dependencies</a></li>
-            <li class="doc-anchor-h2"><a href="#setup-your-development-environment">Setup your development environment</a></li>
-            <li class="doc-anchor-h2"><a href="#add-button-to-the-project">Add Button to the project</a></li>
-            <li class="doc-anchor-h2"><a href="#adding-style-sheet-to-the-application">Adding Style sheet to the Application</a></li>
-            <li class="doc-anchor-h2"><a href="#run-the-application">Run the application</a></li>
-            <li class="doc-anchor-h2"><a href="#change-button-type">Change Button type</a></li>
-            <li class="doc-anchor-h2"><a href="#see-also">See Also</a></li>
+            <li class="doc-anchor-h2 select"><a router-ignore data-router-ignore href="#dependencies">Dependencies</a></li>
+            <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#setup-your-development-environment">Setup your development environment</a></li>
+            <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#add-button-to-the-project">Add Button to the project</a></li>
+            <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#adding-style-sheet-to-the-application">Adding Style sheet to the Application</a></li>
+            <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#run-the-application">Run the application</a></li>
+            <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#change-button-type">Change Button type</a></li>
+            <li class="doc-anchor-h2"><a router-ignore data-router-ignore href="#see-also">See Also</a></li>
           </ul>
         </div>
 
