--- a/dev-app/components/button/button-getting-started.html
+++ b/dev-app/components/button/button-getting-started.html
@@ -3,7 +3,7 @@
   <div class="doc-body-content">
     <div id="md-content" class="e-view">
       <div id="md-cnt">
-        <h1 id="getting-started"><a href="#gs" aria-hidden="" class="anchor"><svg
+        <h1 class="sidebar-heading" id="getting-started"><a href="#gs" aria-hidden="" class="anchor"><svg
               aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
@@ -11,12 +11,12 @@
             </svg></a>Getting started with JavaScript Button control</h1>
         <p>This section explains how to create a simple Button and to configure the Button
           component.</p>
-        <h2 id="dependencies"><a href="#dependencies" aria-hidden="" class="anchor" router-ignore data-router-ignore><svg
+        <h2 class="sidebar-heading" id="dependencies"><a href="#dependencies" aria-hidden="" class="anchor" router-ignore data-router-ignore><svg
               aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
                 d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
               </path>
-            </svg></a>Dependencies</h2>
+            </svg></a>Dependencies</h2 class="sidebar-heading">
         <p>The list of dependencies required to use the Button component in your application is
           given below:</p>
         <div class="gatsby-highlight" data-language="js">
@@ -24,7 +24,7 @@
             class="language-js"><code class="language-js"><span class="token operator">|</span><span class="token operator">--</span> @syncfusion<span class="token operator">/</span>ej2<span class="token operator">-</span>buttons
         <span class="token operator">|</span><span class="token operator">--</span> @syncfusion<span class="token operator">/</span>ej2<span class="token operator">-</span>base</code></pre>
         </div>
-        <h2 id="setup-your-development-environment"><a href="#setup-your-development-environment"
+        <h2 class="sidebar-heading" id="setup-your-development-environment"><a href="#setup-your-development-environment"
             aria-hidden="" class="anchor" router-ignore data-router-ignore><svg aria-hidden="true" height="16" version="1.1"
               viewBox="0 0 16 16" width="16">
               <path fill-rule="evenodd"
@@ -81,7 +81,7 @@
         document<span class="token punctuation">.</span><span class="token function">getElementById</span><span class="token punctuation">(</span><span class="token string">'container'</span><span class="token punctuation">)</span><span class="token punctuation">.</span>style<span class="token punctuation">.</span>visibility <span class="token operator">=</span> <span class="token string">"visible"</span><span class="token punctuation">;</span>
     <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span></code></pre>
         </div>
-        <h2 id="add-button-to-the-project"><a router-ignore data-router-ignore href="#add-button-to-the-project" aria-hidden=""
+        <h2 class="sidebar-heading" id="add-button-to-the-project"><a router-ignore data-router-ignore href="#add-button-to-the-project" aria-hidden=""
             class="anchor"><svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16"
               width="16">
               <path fill-rule="evenodd"
